--- a/layout/nav.ejs
+++ b/layout/nav.ejs
@@ -1,4 +1,53 @@
-<h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+
+  <nav class="d-flex flex-column justify-content-between">
+    <div>
+      <h1>
+        <img src="../assets/images/logo-ANSWER.svg" alt="logo"> 
+      </h1>
+      <ul class="menu list-unstyled fw-bold">
+        <li>
+          <a href="#" class="d-flex align-items-center text-decoration-none">
+            <span class="material-icons me-3">assessment</span>
+            <span>Dashboard</span>
+          </a>
+      </li>
+        <li>
+          <a href="#" class="d-flex align-items-center text-decoration-none">
+            <span class="material-icons me-3">forum</span>
+            <span>Question</span>
+          </a>
+      </li>
+        <li>
+          <a href="#" class="d-flex align-items-center text-decoration-none">
+            <span class="material-icons me-3">assignment</span>
+            <span>Assignment</span>
+          </a>
+      </li>
+        <li>
+          <a href="#" class="d-flex align-items-center text-decoration-none">
+            <span class="material-icons me-3">video_library</span>
+            <span>Course</span>
+          </a>
+      </li>
+        <li>
+          <a href="#" class="d-flex align-items-center text-decoration-none">
+            <span class="material-icons me-3">supervisor_account</span>
+            <span>Admin</span>
+          </a>
+      </li>
+        <li>
+          <a href="#" class="d-flex align-items-center text-decoration-none">
+            <span class="material-icons me-3">settings</span>
+            <span>Settings</span>
+          </a>
+      </li>
+      </ul>
+    </div>
+    <div class="user-info d-flex align-items-center">
+      <img class="rounded-circle me-3" src="../assets/images/andychen.jpeg" alt="user-photo">
+      <div>
+        <p class="mb-1 user-name fw-bold">Andy Chen</p>
+        <p class="mb-0 user-mail">andy0401@mail.com</p>
+      </div>
+    </div>
+  </nav>
