--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,8 +1,5 @@
-$bg-color:#AA0601;
-$bg-color2: #FBF2F2;
-$bg-color3: #fff;
-$bg-color4: #650300;
-$text-color: #fff;
-$text-color2: #AA0601;
-$text-color3: #000;
-$title-color: #650300;
+$bg-color:#F8F9FA;
+$text-color: #212529;
+$text-color2: #6C757D;
+$text-color3: #198754;
+$border-color:#CED4DA;
