新增、修改modal介面完成

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,195 +1,386 @@
-nav{
+nav {
   width: 296px;
   background-color: $bg-color;
   padding-top: 32px;
   padding-bottom: 32px;
   min-height: 100vh;
-  h1{
+
+  h1 {
     margin-bottom: 32px;
     padding-left: 32px;
   }
 }
-.menu{
-  li{
+
+.menu {
+  li {
     margin-bottom: 20px;
   }
-  a{
+
+  a {
     font-family: 'Lato';
     padding-left: 32px;
     border-left: 4px solid transparent;
     color: $text-color;
-    &:hover{
+
+    &:hover {
       color: $text-color3;
       border-left: 4px solid $text-color3;
     }
   }
 }
-.style{
+
+.style {
   font-family: 'Lato';
   line-height: 1.1875rem;
 }
-.user-info{
+
+.user-info {
   padding-left: 32px;
-  img{
+
+  img {
     width: 40px;
     height: 40px;
   }
 }
-.user-name{
+
+.user-name {
   font-family: 'Lato';
   line-height: 1.1875rem;
 }
-.user-mail{
+
+.user-mail {
   color: #6C757D;
   line-height: 1.06rem;
 }
-.main{
+
+.main {
   min-height: 100%;
 }
-.select-course{
+
+.select-course {
   line-height: 1.1875rem;
   margin-right: 9px;
 }
-.content{
-  width:calc( 100% - 296px );
+
+.content {
+  width: calc(100% - 296px);
   padding-left: 32px;
   padding-right: 32px;
 }
-.content-top{
+
+.content-top {
   font-family: 'Lato';
   padding-top: 32px;
   padding-bottom: 32px;
-  h2{
+
+  h2 {
     font-size: 1.5rem;
     line-height: 1.8125rem;
     margin-right: 50px;
   }
 }
-.right{
-  a{
+
+.right {
+  a {
     color: $text-color;
-    &:hover{
+
+    &:hover {
       color: $text-color3;
     }
   }
 }
-.list-group-item{
+
+.list-group-item {
   border: 0 !important;
   // border-top: 1px solid $border-color !important;
   border-left: 1px solid $border-color !important;
   border-right: 1px solid $border-color !important;
 }
-.list-group-item.active{
+
+.list-group-item.active {
   color: $text-color !important;
   background-color: $bg-color !important;
   border-color: $border-color !important;
 }
+
 .list-group-item:first-child {
-  border-top-left-radius:  0 !important;
-  border-top-right-radius:  0 !important;
+  border-top-left-radius: 0 !important;
+  border-top-right-radius: 0 !important;
   border-top: 1px solid $border-color !important;
 }
+
 .list-group-item:last-child {
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
-.style{
+
+.style {
   padding: 12px !important;
 }
-.assessment-list{
+
+.assessment-list {
   line-height: 0.9375rem;
   font-size: 12px;
 }
-.assessment-title{
+
+.assessment-title {
   font-size: 1rem;
   line-height: 1.1875rem;
 }
-.assessment-name{
+
+.assessment-name {
   font-size: 12px;
   color: $text-color2;
   line-height: 0.9375rem;
 }
-.commit-num{
+
+.commit-num {
   color: $text-color2;
 }
-.content-info{
-  img{
+
+.content-info {
+  img {
     width: 40px;
     height: 40px;
   }
 }
-.send-time{
+
+.send-time {
   font-size: 12px;
   color: $text-color2;
   line-height: 0.9375rem;
 }
-.student-name{
+
+.student-name {
   font-size: 1rem;
   line-height: 1.1875rem;
 }
-.content-description{
+
+.content-description {
   padding-left: 48px;
   font-size: 0.875rem;
   line-height: 1.3125rem;
 
 }
-.file{
+
+.file {
   border-bottom: 1px solid $border-color;
   padding-bottom: 16.5px;
-  a{
+
+  a {
     border: 1px solid $border-color;
   }
 }
-.file-name{
+
+.file-name {
   border: 1px solid $border-color;
 }
-.question{
+
+.question {
   font-size: 0.875rem;
   padding-right: 32px;
   line-height: 1.3125rem;
 }
-.package{
+
+.package {
   width: 176px;
   background-color: $bg-color;
   line-height: 1.1875rem;
   color: $text-color;
   border-radius: 2px;
   padding: 8px 12px;
-  &:hover{
+
+  &:hover {
     color: $text-color;
   }
 }
-.answer{
+
+.answer {
   padding-bottom: 22px;
 }
-.fun{
-  a{
+
+.fun {
+  a {
     color: $text-color;
     text-decoration: none;
-    &:hover{
-      color: $text-color3;
-    }
-  }
-}
-.footer{
-  margin-bottom: 32px;
-}
-.switch{
-  a{
-    display: block;
-    margin-right: 23px;
-    color: $text-color;
-    &:hover{
+
+    &:hover {
       color: $text-color3;
     }
   }
 }
 
-.reply,.mark{
+.footer {
+  margin-bottom: 32px;
+}
+
+.switch {
+  a {
+    display: block;
+    margin-right: 23px;
+    color: $text-color;
+
+    &:hover {
+      color: $text-color3;
+    }
+  }
+}
+
+.reply,
+.mark {
   padding-left: 32px !important;
   padding-right: 32px !important;
   border-radius: 2px !important;
 }
+
 .ck-editor__editable_inline {
   min-height: 400px;
+}
+
+//admin
+.fun2 {
+  span {
+    color: $text-color;
+
+    &:hover {
+      color: $text-color3;
+    }
+  }
+}
+.visibility{
+  margin-right: 25px;
+}
+.page-link.s {
+  line-height: 1.25rem !important;
+
+}
+
+.page-link {
+  font-size: 1rem;
+  color: $text-color !important;
+  line-height: 1.1875rem !important;
+  padding-top: 6px !important;
+  padding-bottom: 7px !important;
+  padding-right: 11.5px !important;
+  padding-left: 11.5px !important;
+  border: 1px solid $text-color3 !important;
+
+  &:hover {
+    color: #fff !important;
+    background-color: $text-color3 !important;
+  }
+
+  .material-icons {
+    font-size: 1.5rem;
+  }
+}
+.page-link.active{
+  background-color: $text-color3 !important;
+  color: #fff !important;
+}
+.page-item:first-child .page-link {
+  border-top-left-radius: 2px !important;
+  border-bottom-left-radius: 2px !important;
+}
+
+.page-item:last-child .page-link {
+  border-top-right-radius: 2px !important;
+  border-bottom-right-radius: 2px !important;
+}
+
+.table>:not(caption)>*>* {
+  padding: 19px 8px 17px !important;
+}
+.adduser{
+  padding: 32px !important;
+}
+.modal-header{
+  h5{
+    font-size: 1.5rem;
+    line-height: 1.8125rem;
+  }
+  .btn-close {
+    width: 24px;
+    height: 24px;
+    padding: 0 !important;
+  }
+}
+.modal-body {
+  padding: 0 2rem !important;
+  // min-height: 1200px;
+  .title{
+    padding-top: 24.5px;
+    font-size: 1.25rem;
+  }
+}
+.test{
+  padding-bottom: 24.5px;
+  border-bottom: 1px solid $border-color;
+}
+.send-verification{
+  padding-bottom: 24.5px;
+  border-bottom: 1px solid $border-color;
+  button{
+    &:hover{
+      border: 1px solid $text-color;
+    }
+  }
+}
+.select-level{
+  padding-bottom: 24.5px;
+  border-bottom: 1px solid $border-color;
+}
+.label-title{
+  font-size: 0.875rem;
+  line-height: 1.0625rem;
+}
+.verification-status{
+  line-height: 1.1875rem;
+}
+.modal-footer{
+  padding: 16px 32px !important;
+}
+.btn{
+  padding: 8px 32px !important;
+  border-radius: 2px !important;
+}
+.form-control{
+  border-radius: 2px !important;
+  line-height: 1.1875rem !important;
+}
+.form-select {
+  border-radius: 2px !important;
+  line-height: 1.1875rem !important;
+}
+.form-check-input {
+  border: 2px solid $text-color !important;
+  border-radius: 2px !important;
+}
+.permissions{
+  padding-bottom: 32px;
+}
+//edit modal
+.verification-date{
+  font-size: 0.875em;
+  line-height: 1.0625rem;
+}
+.send-verification.disabled{
+  button{
+    border: 1px solid $border-color;
+    color: $border-color;
+  }
+}
+.permissions.edit{
+  padding-bottom: 24.5px;
+  border-bottom: 1px solid $border-color;
+}
+.delete{
+  .btn{
+    &:hover{
+      color: #fff !important;
+    }
+  }
+}
+.delete-acount{
+  padding-bottom: 24px;
 }
