管理帳號頁面完成

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -5,4 +5,5 @@
 @import './layout/nav.scss';
 @import './layout/footer.scss';
 @import './pages/index.scss';
+@import "./pages/admin";
 @import "../../node_modules/bootstrap";
