--- a/layout/nav.ejs
+++ b/layout/nav.ejs
@@ -2,7 +2,9 @@
   <nav class="d-flex flex-column justify-content-between">
     <div>
       <h1>
-        <img src="../assets/images/logo-ANSWER.svg" alt="logo"> 
+        <a href="./index.html">
+          <img src="../assets/images/logo-ANSWER.svg" alt="logo"> 
+        </a>
       </h1>
       <ul class="menu list-unstyled fw-bold">
         <li>
@@ -30,7 +32,7 @@
           </a>
       </li>
         <li>
-          <a href="#" class="d-flex align-items-center text-decoration-none">
+          <a href="./admin.html" class="d-flex align-items-center text-decoration-none">
             <span class="material-icons me-3">supervisor_account</span>
             <span>Admin</span>
           </a>
