--- a/layout/nav.ejs
+++ b/layout/nav.ejs
@@ -20,7 +20,7 @@
           </a>
       </li>
         <li>
-          <a href="#" class="d-flex align-items-center text-decoration-none">
+          <a href="./index.html" class="d-flex align-items-center text-decoration-none active">
             <span class="material-icons me-3">assignment</span>
             <span>Assignment</span>
           </a>
